Fix hover on mobile

--- a/components/Navbar/NavBar.module.css
+++ b/components/Navbar/NavBar.module.css
@@ -26,8 +26,10 @@
   background-color: white;
 }
 
-.logo:hover {
-  background-color: #000;
-  color: white;
-  cursor: pointer;
+@media (hover: hover) and (pointer: fine) {
+  .logo:hover {
+    background-color: #000;
+    color: white;
+    cursor: pointer;
+  }
 }
